# OrphanWatch

./: CMakeLists.txt  compile_commands.json
config/: watchlist.json
resources/: app.manifest  resource.h  resource.rc
src/: Application.cpp  Application.h  Config.cpp  Config.h  OrphanDialog.cpp  OrphanDialog.h  ProcessMonitor.cpp  ProcessMonitor.h  ProcessTree.cpp  ProcessTree.h  TrayIcon.cpp  TrayIcon.h  WmiEventSink.cpp  WmiEventSink.h  main.cpp
